# src/app.ts
@@ -2,8 +2,9 @@ import express from 'express';
 import 'dotenv/config';
 import { connectDB } from './config/db.js';
 import tlRoute from './routes/tl.route.js';
-// import coderRoute from './routes/coder.route.js';
-// import clanRoute from './routes/clan.route.js';
+import coderRoute from './routes/coder.route.js';
+import clanRoute from './routes/clan.route.js';
+import routeRoute from './routes/routes.route.js';
 import swaggerUi from 'swagger-ui-express';
 import YAML from 'yamljs';
 
@@ -14,6 +15,11 @@ const app = express();
 const swaggerDocument = YAML.load('./swagger.yml');
 
 app.use(express.json());
+
+app.use('/tls', tlRoute);
+app.use('/coders', coderRoute);
+app.use('/clans', clanRoute);
+app.use('/routes', routeRoute);
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
