# src/routes/tl.route.ts
@@ -25,4 +25,56 @@ router.get('/', async (req: Request, res: Response) => {
   }
 });
 
+// Get a TL by ID
+
+router.get('/:id', async (req: Request, res: Response) => {
+  try {
+    const { id } = req.params;
+    const tl = await TLModel.findById(id);
+
+    if (!tl) {
+      return res.status(404).json({ message: 'TL not found' });
+    }
+    res.status(200).json(tl);
+  } catch (error) {
+    res.status(500).json({ message: 'Error fetching TL', error });
+  }
+});
+
+// Update a TL by ID
+
+router.put('/:id', async (req: Request, res: Response) => {
+  try {
+    const id = req.params.id;
+    const { name, description, position } = req.body;
+    const updatedTL = await TLModel.findByIdAndUpdate(
+      id,
+      { name, description, position },
+      { new: true }
+    );
+
+    if (!updatedTL) {
+      return res.status(404).json({ message: 'TL not found' });
+    }
+    res.status(200).json(updatedTL);
+  } catch (error) {
+    res.status(500).json({ message: 'Error updating TL', error });
+  }
+});
+
+// Delete a TL by ID
+router.delete('/:id', async (req: Request, res: Response) => {
+  try {
+    const { id } = req.params;
+    const deletedTL = await TLModel.findByIdAndDelete(id);
+
+    if (!deletedTL) {
+      return res.status(404).json({ message: 'TL not found' });
+    }
+    res.status(200).json({ message: 'TL deleted successfully' });
+  } catch (error) {
+    res.status(500).json({ message: 'Error deleting TL', error });
+  }
+});
+
 export default router;
